// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render correctly 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c4 > svg {
  width: 1.3rem;
  height: 1.3rem;
  fill: #545456;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50px;
  height: 2.7rem;
  background-color: #FFCA00;
  border-top-right-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
}

<SearchBar
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <Styled(Input)>
        <Input
          className="c1"
          disabled={false}
          type="text"
          width="100%"
        >
          <styled.input
            className="c1"
            disabled={false}
            type="text"
            width="100%"
          >
            <input
              className="c1 c2"
              disabled={false}
              type="text"
              width="100%"
            />
          </styled.input>
        </Input>
      </Styled(Input)>
      <styled.div>
        <div
          className="c3"
        >
          <Icon
            name="searchFilled"
            selectable={true}
            size="1.3rem"
          >
            <styled.div
              selectable="1"
              size="1.3rem"
            >
              <div
                className="c4"
                size="1.3rem"
              >
                <searchFilled
                  height="32"
                  viewBox="0 0 32 32"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      search-filled
                    </title>
                    <path
                      d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                    />
                  </svg>
                </searchFilled>
              </div>
            </styled.div>
          </Icon>
        </div>
      </styled.div>
    </div>
  </styled.div>
</SearchBar>
`;

exports[`SearchBar should render correctly with onChange 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c4 > svg {
  width: 1.3rem;
  height: 1.3rem;
  fill: #545456;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50px;
  height: 2.7rem;
  background-color: #FFCA00;
  border-top-right-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
}

<SearchBar
  onChange={[MockFunction]}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <Styled(Input)
        onChange={[MockFunction]}
      >
        <Input
          className="c1"
          disabled={false}
          onChange={[MockFunction]}
          type="text"
          width="100%"
        >
          <styled.input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            width="100%"
          >
            <input
              className="c1 c2"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              width="100%"
            />
          </styled.input>
        </Input>
      </Styled(Input)>
      <styled.div>
        <div
          className="c3"
        >
          <Icon
            name="searchFilled"
            selectable={true}
            size="1.3rem"
          >
            <styled.div
              selectable="1"
              size="1.3rem"
            >
              <div
                className="c4"
                size="1.3rem"
              >
                <searchFilled
                  height="32"
                  viewBox="0 0 32 32"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      search-filled
                    </title>
                    <path
                      d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                    />
                  </svg>
                </searchFilled>
              </div>
            </styled.div>
          </Icon>
        </div>
      </styled.div>
    </div>
  </styled.div>
</SearchBar>
`;

exports[`SearchBar should render correctly with onClick 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c4 > svg {
  width: 1.3rem;
  height: 1.3rem;
  fill: #545456;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50px;
  height: 2.7rem;
  background-color: #FFCA00;
  border-top-right-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
}

<SearchBar
  onClick={[MockFunction]}
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <Styled(Input)>
        <Input
          className="c1"
          disabled={false}
          type="text"
          width="100%"
        >
          <styled.input
            className="c1"
            disabled={false}
            type="text"
            width="100%"
          >
            <input
              className="c1 c2"
              disabled={false}
              type="text"
              width="100%"
            />
          </styled.input>
        </Input>
      </Styled(Input)>
      <styled.div>
        <div
          className="c3"
        >
          <Icon
            name="searchFilled"
            onClick={[MockFunction]}
            selectable={true}
            size="1.3rem"
          >
            <styled.div
              onClick={[MockFunction]}
              selectable="1"
              size="1.3rem"
            >
              <div
                className="c4"
                onClick={[MockFunction]}
                size="1.3rem"
              >
                <searchFilled
                  height="32"
                  viewBox="0 0 32 32"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      search-filled
                    </title>
                    <path
                      d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                    />
                  </svg>
                </searchFilled>
              </div>
            </styled.div>
          </Icon>
        </div>
      </styled.div>
    </div>
  </styled.div>
</SearchBar>
`;

exports[`SearchBar should render correctly with value 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c4 > svg {
  width: 1.3rem;
  height: 1.3rem;
  fill: #545456;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50px;
  height: 2.7rem;
  background-color: #FFCA00;
  border-top-right-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
}

<SearchBar
  onChange={[MockFunction]}
  value="My search"
  width="100%"
>
  <styled.div
    width="100%"
  >
    <div
      className="c0"
      width="100%"
    >
      <Styled(Input)
        onChange={[MockFunction]}
        value="My search"
      >
        <Input
          className="c1"
          disabled={false}
          onChange={[MockFunction]}
          type="text"
          value="My search"
          width="100%"
        >
          <styled.input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            value="My search"
            width="100%"
          >
            <input
              className="c1 c2"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              value="My search"
              width="100%"
            />
          </styled.input>
        </Input>
      </Styled(Input)>
      <styled.div>
        <div
          className="c3"
        >
          <Icon
            name="searchFilled"
            selectable={true}
            size="1.3rem"
          >
            <styled.div
              selectable="1"
              size="1.3rem"
            >
              <div
                className="c4"
                size="1.3rem"
              >
                <searchFilled
                  height="32"
                  viewBox="0 0 32 32"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      search-filled
                    </title>
                    <path
                      d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                    />
                  </svg>
                </searchFilled>
              </div>
            </styled.div>
          </Icon>
        </div>
      </styled.div>
    </div>
  </styled.div>
</SearchBar>
`;

exports[`SearchBar should render correctly with width 1`] = `
.c2 {
  display: block;
  width: 100%;
  height: 2.7rem;
  padding: 0 1.4rem;
  box-sizing: border-box;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  color: #545456;
  border-width: 1px;
  border-color: #CCC;
  border-style: solid;
  border-radius: 0.125rem;
  background-color: #FFF;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c2:disabled {
  color: #545456;
  background: #FFF;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::-moz-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2:-ms-input-placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c2::placeholder {
  color: #999B9E;
  font-size: 0.875rem;
}

.c4 > svg {
  width: 1.3rem;
  height: 1.3rem;
  fill: #545456;
  cursor: pointer;
}

.c4 > svg:hover {
  fill: #757679;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 200px;
}

.c1 {
  background-color: #FFF;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50px;
  height: 2.7rem;
  background-color: #FFCA00;
  border-top-right-radius: 0.125rem;
  border-bottom-right-radius: 0.125rem;
}

<SearchBar
  onChange={[MockFunction]}
  value="My search"
  width="200px"
>
  <styled.div
    width="200px"
  >
    <div
      className="c0"
      width="200px"
    >
      <Styled(Input)
        onChange={[MockFunction]}
        value="My search"
      >
        <Input
          className="c1"
          disabled={false}
          onChange={[MockFunction]}
          type="text"
          value="My search"
          width="100%"
        >
          <styled.input
            className="c1"
            disabled={false}
            onChange={[MockFunction]}
            type="text"
            value="My search"
            width="100%"
          >
            <input
              className="c1 c2"
              disabled={false}
              onChange={[MockFunction]}
              type="text"
              value="My search"
              width="100%"
            />
          </styled.input>
        </Input>
      </Styled(Input)>
      <styled.div>
        <div
          className="c3"
        >
          <Icon
            name="searchFilled"
            selectable={true}
            size="1.3rem"
          >
            <styled.div
              selectable="1"
              size="1.3rem"
            >
              <div
                className="c4"
                size="1.3rem"
              >
                <searchFilled
                  height="32"
                  viewBox="0 0 32 32"
                  width="32"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    height="32"
                    viewBox="0 0 32 32"
                    width="32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      search-filled
                    </title>
                    <path
                      d="M14.856.104a12.34 12.34 0 0 0-1.559-.095c-7.069 0-12.8 5.731-12.8 12.8s5.731 12.8 12.8 12.8c2.513 0 4.858-.724 6.835-1.976l-.052.031 7.672 7.672c.41.409.975.662 1.6.662s1.19-.253 1.6-.662c.409-.41.662-.975.662-1.6s-.253-1.19-.662-1.6l-7.544-7.528a12.659 12.659 0 0 0 2.648-7.777c0-.55-.035-1.091-.102-1.623l.007.063C25.213 5.45 20.669.884 14.923.11l-.066-.007zm-1.64 2.92c5.421 0 9.816 4.395 9.816 9.816s-4.395 9.816-9.816 9.816c-5.421 0-9.816-4.395-9.816-9.816v-.042.002c.014-5.402 4.396-9.776 9.8-9.776h.017-.001z"
                    />
                  </svg>
                </searchFilled>
              </div>
            </styled.div>
          </Icon>
        </div>
      </styled.div>
    </div>
  </styled.div>
</SearchBar>
`;
